# 2026_chess

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: plan.md
include/chess/: Board.h  CheckDetector.h  Color.h  CoordinateParser.h  GameController.h  GameState.h  GameStatus.h  GameUI.h  IBoardRenderer.h  ICheckDetector.h  IGameController.h  IInputProvider.h  IMoveRules.h  InputEvent.h  MoveRules.h  Piece.h  PieceType.h  Position.h  RenderState.h
src/: Board.cpp  CheckDetector.cpp  CoordinateParser.cpp  GameController.cpp  GameState.cpp  GameUI.cpp  MoveRules.cpp
tests/: test_board_setup.cpp  test_check_detector.cpp  test_coordinate_parser.cpp  test_game_controller.cpp  test_game_state.cpp  test_game_ui.cpp  test_move_rules.cpp
